# M5Chain-BITMAN

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  NOTICE.md  README.md  platformio.ini
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md
include/bitman/: bitman_core.hpp  bitman_engine.hpp  controller.hpp  frame8.hpp  motion_classifier.hpp  panel_composer.hpp  sprites.hpp  types.hpp
src/: main.cpp
src/controllers/: atoms3r_controller.cpp  atoms3r_controller.hpp
src/core/: bitman_core.cpp  bitman_engine.cpp  frame8.cpp  motion_classifier.cpp  panel_composer.cpp  sprites.cpp
src/drivers/: chain_mono_display.cpp  chain_mono_display.hpp
tests/: test_main.cpp
tools/: preview.cpp
